should document API changes and deprecations, and other "large"
changes that have an effect on users.  Bug fixes and minor changes
aren't documented here, unless the bug-fix has a major observable
effect.  If you change something in VXL, please document it here.

---------------------------------------------------------------------------

      - Removed broken vil_blob_finder, and replaced it with
        vil_blob, a collection of blob manipulation functions.
        The new API is more batch oriented rather than the old
        iterator-style.


      - Generalized vnl_sparse_lst_sqr_function and vnl_sparse_lm
        to allow for global parameters in the optimization.  Used
        this in vpgl_bundle_adjust to allow for shared intrinsic
        camera parameters in bundle adjustment.

******************************
VXL 1.16.0    - December 2010
******************************

      - generalized sparse symmetric eigensystem solver (A*x = lambda*B*x)
        added to vnl/algo/vnl_sparse_symmetric_eigensystem

******************************
VXL 1.15.0    - September 2010
******************************

      - bzlib added to v3p (popular alternative for zlib)

      - "win32" interface added to vgui

      - contrib/brl/bseg/boxm (octree based modelling) was completely rewritten

******************************
VXL 1.14.0      - January 2010
******************************

      - Added some greyscale morphology functionality to vil3d

      - vil has been relaxed to allow use of user-defined types as pixels.

      - Added some simple support for NA value to represent missing data in vnl

      - Added a vnl_svd_fixed which avoids use of heap memory.

      - Added core/vgl/algo/vgl_orient_box_3d_operators: non-axis-aligned
        minimal-volume bounding box calculations. (Currently just a stub.)

******************************
VXL 1.13.0    - September 2009
******************************
