@@ -118,7 +118,7 @@
 * - vnl_fft_2d : 2D Fast Fourier Transform
 * - vnl_determinant (but see also vnl_determinant in library vnl)
 * - vnl_matrix_inverse (but see also vnl_matrix_inverse in library vnl)
-* - vnl_adjugate : return the adjugate (or adjoint) matrix
+* - vnl_adjugate : return the adjugate (or adjoint, or cofactors) matrix
 * - vnl_convolve
 * - vnl_chi_squared : CDF of chi-squared distribution
 * - vnl_fit_parabola : given three points, return 2nd degree fitting polynomial
